 * The type of the ``search_fields`` attribute on ``Page`` models (and other searchable models) has changed from a tuple to a list (Tim Heap)
 * Use `PasswordChangeForm` when user changes their password, requiring the user to enter their current password (Matthijs Melissen)
 * Highlight current day in date picker (Jonas Lergell)
 * Fix: The currently selected day is now highlighted only in the correct month in date pickers (Jonas Lergell)
 * Fix: Fixed crash when an image without a source file was resized with the "dynamic serve view"


1.4.3 (04.04.2016)
~~~~~~~~~~~~~~~~~~

 * Fixed regression introduced in 1.4.2 which caused Wagtail to query the database during a system check (Tim Heap)


1.4.2 (31.03.2016)
~~~~~~~~~~~~~~~~~~

 * Fix: Streamfields no longer break on validation error
 * Fix: Number of validation errors in each tab in the editor is now correctly reported again
 * Fix: Userbar now opens on devices with both touch and mouse (Josh Barr)
 * Fix: `wagtail.wagtailadmin.wagtail_hooks` no longer calls `static` during app load, so you can use `ManifestStaticFilesStorage` without calling the `collectstatic` command
 * Fix: Fixed crash on page save when a custom `Page` edit handler has been specified using the `edit_handler` attribute (Tim Heap)


1.4.1 (17.03.2016)
~~~~~~~~~~~~~~~~~~

 * Fix: Fixed erroneous rendering of up arrow icons (Rob Moorman)


1.4 (16.03.2016)
~~~~~~~~~~~~~~~~

 * Added support for viewing previous revisions of pages, and previewing or rolling back to earlier versions
 * Introduced collections, for image / document organisation
 * The Wagtail userbar on the frontend has been redesigned, and no longer depends on an iframe (Thomas Winter, Gareth Price).
 * The page editor now produces a warning if the user navigates away without saving changes
 * 'Add document' interface now supports uploading multiple documents at once
 * The `Document` model can now be overridden using the new `WAGTAILDOCS_DOCUMENT_MODEL` setting (Alex Gleason)